# xrootd-cmstfc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yaml
docker/: Dockerfile  Dockerfile.base  Dockerfile.rpm  Dockerfile.test
spec/: xrootd-cmstfc.spec
tests/: storage.json  storage.xml  test_json.cc  test_json.py  test_xml.cc
